--- a/styles/base.css
+++ b/styles/base.css
@@ -93,6 +93,39 @@ p {
   line-height: 1.4;
 }
 
+/* List Styling */
+ul, ol {
+  margin-bottom: 0.5rem;
+  padding-left: 1.5rem;
+  line-height: 1.4;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+ol {
+  list-style-type: decimal;
+}
+
+li {
+  margin-bottom: 0.25rem;
+}
+
+/* Blockquote Styling */
+blockquote {
+  border-left: 4px solid var(--tokyo-red);
+  background-color: var(--tokyo-light-gray);
+  padding: 0.5rem 1rem;
+  margin: 1rem 0;
+  font-style: italic;
+  color: var(--tokyo-gray);
+}
+
+blockquote p {
+  margin-bottom: 0;
+}
+
 .slidev-code {
   background-color: var(--tokyo-light-gray) !important;
   border-radius: 0.5rem;
