--- a/styles/base.css
+++ b/styles/base.css
@@ -26,94 +26,96 @@ body,
   padding: 0;
 }
 
-h1,
-h2 {
+/* Increase specificity for Headings */
+.slidev-layout h1,
+.slidev-layout h2 {
   font-family: var(--slidev-font-family);
   color: var(--tokyo-red);
 }
 
-h3,
-h4,
-h5,
-h6 {
+.slidev-layout h3,
+.slidev-layout h4,
+.slidev-layout h5,
+.slidev-layout h6 {
   font-family: var(--slidev-font-family);
   color: var(--tokyo-gray);
 }
 
-h1 {
+.slidev-layout h1 {
   font-size: 3.5rem;
   line-height: 1.1;
   margin-bottom: 1rem;
 }
 
-h2 {
+.slidev-layout h2 {
   font-size: 2.5rem;
   line-height: 1.1;
   margin-bottom: 0.75rem;
 }
 
-h3 {
+.slidev-layout h3 {
   font-size: 2rem;
   line-height: 1.15;
   margin-bottom: 0.625rem;
 }
 
-h4 {
+.slidev-layout h4 {
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
 }
 
-h5 {
+.slidev-layout h5 {
   font-size: 1.25rem;
 }
 
-h6 {
+.slidev-layout h6 {
   font-size: 1.125rem;
 }
 
 /* Code block styling */
-code,
-kbd,
-pre,
-samp {
+.slidev-layout code,
+.slidev-layout kbd,
+.slidev-layout pre,
+.slidev-layout samp {
   font-family: var(--slidev-code-font-family) !important;
   font-size: 0.875em;
 }
 
 /* Inline code specifically */
-:not(pre) > code {
+.slidev-layout :not(pre) > code {
   background-color: var(--tokyo-light-gray);
   padding: 0.1rem 0.3rem;
   border-radius: 0.25rem;
 }
 
 /* Adjust paragraph margins for tighter spacing */
-p {
+.slidev-layout p {
   margin-bottom: 0.5rem;
   line-height: 1.4;
 }
 
 /* List Styling */
-ul, ol {
+.slidev-layout ul, 
+.slidev-layout ol {
   margin-bottom: 0.5rem;
   padding-left: 1.5rem;
   line-height: 1.4;
 }
 
-ul {
+.slidev-layout ul {
   list-style-type: disc;
 }
 
-ol {
+.slidev-layout ol {
   list-style-type: decimal;
 }
 
-li {
+.slidev-layout li {
   margin-bottom: 0.25rem;
 }
 
 /* Blockquote Styling */
-blockquote {
+.slidev-layout blockquote {
   border-left: 4px solid var(--tokyo-red);
   background-color: var(--tokyo-light-gray);
   padding: 0.5rem 1rem;
@@ -122,7 +124,7 @@ blockquote {
   color: var(--tokyo-gray);
 }
 
-blockquote p {
+.slidev-layout blockquote p {
   margin-bottom: 0;
 }
 
